# erlkim-ppob

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/admin/: index.html  package-lock.json  package.json  vite.config.ts
apps/admin/src/: AdminApp.tsx  adminActionHelper.ts  adminStatusHelper.ts  api.ts  main.tsx  styles.css  testingBadgeAdmin.ts
apps/api-rust/: Cargo.toml
apps/api-rust/src/: admin.rs  admin_crud.rs  handlers.rs  main.rs  models.rs  providers.rs  store.rs  webhooks.rs
apps/web/: index.html  package-lock.json  package.json  server.cjs
apps/web/src/: App.jsx  index.css  main.jsx  styles.css
cloudflared/: config.example.yml
files/apps/admin/: vite.config.ts
nginx-local/: README-OPTIONAL.md
nginx/sites-available/: admin.erlkim.web.id.conf  api.erlkim.web.id.conf  store.erlkim.web.id.conf
nginx/snippets/: cloudflare-real-ip.conf  proxy-common.conf
scripts/: audit-vps-security.sh  backup-db.sh  check-category-regression-vps.sh  check-json.mjs  check-local-services.sh  check-public-domains.sh  check-web-ui-imports.sh  deploy-rust.sh  deploy-universal.sh  harness-v52-category-mapper.mjs  install-cloudflared-service.sh  install-nginx-config.sh  migrate-to-pg.ts  ops-check-category.sh  repair-api-package-json.ps1  scheduler-clean-vps.sh  scheduler-status-vps.sh  smoke-category-vps.sh  smoke-local.mjs  smoke-vps.sh  test-public-invoice-safe.sh  test-public-paid-token-cleanup.sh  test-v33-audit-fixes.sh  test-v34-scheduler-clean.sh  update-cloudflare-real-ip.sh
storage/logs/: scheduler-clean-smoke-last
(+214 files in other folders)
